public class AnimationTags
{   //movements
    public const string idle = "Idle";
    public const string walk = "Walk";
    public const string crouch = "Crouch";
    public const string run = "Run";
    //dodges
    public const string dodge1 = "Dodge1";
    public const string dodge2 = "Dodge2";
    public const string slide = "Slide";
    public const string recovery = "Recovery";
    public const string jump = "Jump";
    //blocks
    public const string block = "Block";
    public const string parry = "Parry";
    //attacks
    public const string basic1 = "Basic1";
    public const string basic2 = "Basic2";
    public const string basic3 = "Basic3";
    //special attacks
    public const string sweep = "Sweep";
    public const string hold = "Hold";
    public const string bounce = "Bounce";
    public const string chargehold = "ChargeHold";
    public const string chargerelease = "ChargeRelease";
    //Statuses
    public const string falling = "Fall";
    public const string landing = "Land";
    public const string standup = "Stand";
    public const string hit = "Hit";
    public const string death = "Death";
    public const string comboend = "ComboEnd";
    public const string recoil = "Recoil";
}
public class Axis
{
    public const string horizontalaxis = "Horizontal";
    public const string verticalaxis = "Vertical";
}
public class Tags
{
    public const string groundtag = "Ground";
    public const string playertag = "Player";
    public const string enemytag = "Enemy";
    public const string maincameratag = "MainCam";
    public const string healthUI = "HealthUI";
    public const string untagged = "Untagged";
}